--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 chrono = "0.4.41"
+color = "0.3.1"
 #csv = "1.3.1"
 #num-traits = "0.2.19"
 rust_decimal = "1.37.1"
