--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 anyhow = "1.0.98"
 chrono = "0.4.41"
 color = "0.3.1"
+rand = "0.9.2"
+rand_distr = "0.5.1"
 #csv = "1.3.1"
 #num-traits = "0.2.19"
 rust_decimal = "1.37.1"
